# example-massive-categorizer

./: classifier.ipynb  pyproject.toml
baml_client/: client.py  inlinedbaml.py  partial_types.py  type_builder.py  types.py
baml_src/: classifier.baml  generators.baml
data/: category.txt
