[tool.poetry]
name = "twitter-classifier"
version = "0.1.0"
description = ""
authors = ["Vaibhav Gupta <vbv@boundaryml.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
baml-py = "^0.41.0"
openai = "^1.35.2"
pandas = "^2.2.2"
maturin = "^1.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
